--- a/ALP_V32mary.ipynb
+++ b/ALP_V32mary.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlmjDU7IvQ5aywqmGvaXDu",
+      "authorship_tag": "ABX9TyNrEbZx+44/KjEuk1BiCmt0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -201,6 +201,188 @@
             "digite sua altura1.7\n",
             "digite seu peso: 50\n",
             " seu IMC é:  17.301038062283737\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Hak-tsfnSRzW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Estrutura Condicional\n",
+        "\n",
+        "if  - se\n",
+        "\n",
+        "elif - senão se\n",
+        "\n",
+        "else - senão"
+      ],
+      "metadata": {
+        "id": "Dm5ZLEk68NdI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nota = float(input(\"Digite a sua nota: \"))\n",
+        "\n",
+        "if (nota >= 7):\n",
+        "  print(\"Aprovado\")\n",
+        "elif (nota >= 5):\n",
+        "  print(\"Recuperação\")\n",
+        "else:\n",
+        "  print(\"Reprovado\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-PFjGGnV_ZQ8",
+        "outputId": "cbaceef6-a44a-42af-83c9-9b7bb3113a64"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a sua nota: 6.5\n",
+            "Recuperação\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4 - Crie um algoritmo que leia a sua idade e dependendo da idade mostre as frases na tela:\n",
+        "\n",
+        "até 12 anos - Você é uma Criança!\n",
+        "\n",
+        "13 - 18     - Você é Adolescente!\n",
+        "\n",
+        "19 - 60     - Você é Adulto!\n",
+        "\n",
+        "acima de 60 - Você é Idoso!"
+      ],
+      "metadata": {
+        "id": "b5TRwwHcDGo0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idade = int(input(\"Digite sua idade: \"))\n",
+        "\n",
+        "if (idade <= 12):\n",
+        "  print(\"Você é uma criança!\")\n",
+        "elif (idade <= 18):\n",
+        "  print(\"Você é um adolescente!\")\n",
+        "elif (idade <= 60):\n",
+        "  print(\"você é um adulto!\")\n",
+        "else:\n",
+        "  print(\"Você é um idoso!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BOeF1AywD15E",
+        "outputId": "8dd27df4-2d84-4923-95fe-9a94308a02e6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite sua idade: 50\n",
+            "você é um adulto!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5 - Crie um algoritmo que receba 2 numeros e uma escolha que mostre o seguinte menu:\n",
+        "\n",
+        "Selecione o sinal:\n",
+        "\n",
+        "1 - Adição\n",
+        "\n",
+        "2 - Subtração\n",
+        "\n",
+        "3 - Multiplicação\n",
+        "\n",
+        "4 - Divisão\n",
+        "\n",
+        "caso não escolha um numero válido apareça na tela: Opção inválida!\n",
+        "\n",
+        "se escolher 1 some os 2 números e mostre o resultado.\n",
+        "\n",
+        "se escolher 2 subtraia os 2 números e mostre o resultado.\n",
+        "\n",
+        "e assim com as outras opções."
+      ],
+      "metadata": {
+        "id": "j3of7yj7RIxP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Selecione o sinal: \")\n",
+        "print(\"1 - Adição\")\n",
+        "print(\"2 - Subtração\")\n",
+        "print(\"3 - Multiplicação\")\n",
+        "print(\"4 - Divisão\")\n",
+        "\n",
+        "sinal = int(input(\"Digite o sinal: \"))\n",
+        "\n",
+        "if (sinal < 1) or (sinal > 4):\n",
+        "  print(\"Opção inválida!\")\n",
+        "else:\n",
+        "  numero1 = float(input(\"Digite o primeiro número: \"))\n",
+        "  numero2 = float(input(\"Digite o segundo número: \"))\n",
+        "\n",
+        "  if (sinal == 1):\n",
+        "    print(\"A soma é igual a: \", numero1 + numero2)\n",
+        "  elif (sinal == 2):\n",
+        "    print(\"A subtração é igual a: \", numero1 - numero2)\n",
+        "  elif (sinal == 3):\n",
+        "    print(\"A multiplicação é igual a: \", numero1 * numero2)\n",
+        "  elif (sinal == 4):\n",
+        "    print(\"A divisão é igual a: \", numero1 / numero2)\n"
+      ],
+      "metadata": {
+        "id": "glE1CB86SXrX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6590f278-524d-41b2-8175-06102386baaa"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Selecione o sinal: \n",
+            "1 - Adição\n",
+            "2 - Subtração\n",
+            "3 - Multiplicação\n",
+            "4 - Divisão\n",
+            "Digite o sinal: 3\n",
+            "Digite o primeiro número: 14\n",
+            "Digite o segundo número: 21\n",
+            "A multiplicação é igual a:  294.0\n"
           ]
         }
       ]
