--- a/ALP_V32mary.ipynb
+++ b/ALP_V32mary.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrEbZx+44/KjEuk1BiCmt0",
+      "authorship_tag": "ABX9TyM7m/+ndjLb9IYNsRp4B8x3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -207,53 +207,38 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "Hak-tsfnSRzW"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "##Estrutura Condicional\n",
-        "\n",
-        "if  - se\n",
-        "\n",
-        "elif - senão se\n",
-        "\n",
-        "else - senão"
+        "Peça um número e informe se ele é maior que 10. Crie um algoritmo em Python para fazer essa verificação."
       ],
       "metadata": {
-        "id": "Dm5ZLEk68NdI"
+        "id": "U2rSPrc2BCB7"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "nota = float(input(\"Digite a sua nota: \"))\n",
+        "número = float(input(\"Digite seu número: \"))\n",
         "\n",
-        "if (nota >= 7):\n",
-        "  print(\"Aprovado\")\n",
-        "elif (nota >= 5):\n",
-        "  print(\"Recuperação\")\n",
+        "if (número > 10):\n",
+        "  print(\"maior que 10\")\n",
         "else:\n",
-        "  print(\"Reprovado\")\n"
+        "  print(\"menor que 10\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "-PFjGGnV_ZQ8",
-        "outputId": "cbaceef6-a44a-42af-83c9-9b7bb3113a64"
+        "id": "V6TGSM0iBGx7",
+        "outputId": "f24d5d25-49f9-42d2-e642-ba9576716269"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite a sua nota: 6.5\n",
-            "Recuperação\n"
+            "Digite seu número: 15\n",
+            "maior que 10\n"
           ]
         }
       ]
@@ -261,49 +246,37 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4 - Crie um algoritmo que leia a sua idade e dependendo da idade mostre as frases na tela:\n",
-        "\n",
-        "até 12 anos - Você é uma Criança!\n",
-        "\n",
-        "13 - 18     - Você é Adolescente!\n",
-        "\n",
-        "19 - 60     - Você é Adulto!\n",
-        "\n",
-        "acima de 60 - Você é Idoso!"
+        "Peça um número inteiro e informe se ele é par. Crie um algoritmo em Python que verifique se o número é divisível por 2."
       ],
       "metadata": {
-        "id": "b5TRwwHcDGo0"
+        "id": "JM7n7o5QEBRb"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "idade = int(input(\"Digite sua idade: \"))\n",
+        "numero_inteiro = int(input(\"Digite um número inteiro: \"))\n",
         "\n",
-        "if (idade <= 12):\n",
-        "  print(\"Você é uma criança!\")\n",
-        "elif (idade <= 18):\n",
-        "  print(\"Você é um adolescente!\")\n",
-        "elif (idade <= 60):\n",
-        "  print(\"você é um adulto!\")\n",
+        "if numero_inteiro % 2 == 0:\n",
+        "  print(f\"O número {numero_inteiro} é par.\")\n",
         "else:\n",
-        "  print(\"Você é um idoso!\")"
+        "  print(f\"O número {numero_inteiro} é ímpar.\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "BOeF1AywD15E",
-        "outputId": "8dd27df4-2d84-4923-95fe-9a94308a02e6"
+        "id": "fpmgdb2pEJSD",
+        "outputId": "181f90c2-c299-4162-e7e1-a21e3da5915e"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite sua idade: 50\n",
-            "você é um adulto!\n"
+            "Digite um número inteiro: 21\n",
+            "O número 21 é ímpar.\n"
           ]
         }
       ]
@@ -311,78 +284,328 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5 - Crie um algoritmo que receba 2 numeros e uma escolha que mostre o seguinte menu:\n",
-        "\n",
-        "Selecione o sinal:\n",
-        "\n",
-        "1 - Adição\n",
-        "\n",
-        "2 - Subtração\n",
-        "\n",
-        "3 - Multiplicação\n",
-        "\n",
-        "4 - Divisão\n",
-        "\n",
-        "caso não escolha um numero válido apareça na tela: Opção inválida!\n",
-        "\n",
-        "se escolher 1 some os 2 números e mostre o resultado.\n",
-        "\n",
-        "se escolher 2 subtraia os 2 números e mostre o resultado.\n",
-        "\n",
-        "e assim com as outras opções."
+        "Peça um nome e informe se ele contém a letra \"a\". Crie um algoritmo em Python que faça essa verificação."
       ],
       "metadata": {
-        "id": "j3of7yj7RIxP"
+        "id": "hHqSUIgbFBlV"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "print(\"Selecione o sinal: \")\n",
-        "print(\"1 - Adição\")\n",
-        "print(\"2 - Subtração\")\n",
-        "print(\"3 - Multiplicação\")\n",
-        "print(\"4 - Divisão\")\n",
+        "nome = input(\"Digite um nome: \")\n",
         "\n",
-        "sinal = int(input(\"Digite o sinal: \"))\n",
-        "\n",
-        "if (sinal < 1) or (sinal > 4):\n",
-        "  print(\"Opção inválida!\")\n",
+        "if 'a' in nome.lower():\n",
+        "  print(f\"O nome '{nome}' contém a letra 'a'.\")\n",
         "else:\n",
-        "  numero1 = float(input(\"Digite o primeiro número: \"))\n",
-        "  numero2 = float(input(\"Digite o segundo número: \"))\n",
-        "\n",
-        "  if (sinal == 1):\n",
-        "    print(\"A soma é igual a: \", numero1 + numero2)\n",
-        "  elif (sinal == 2):\n",
-        "    print(\"A subtração é igual a: \", numero1 - numero2)\n",
-        "  elif (sinal == 3):\n",
-        "    print(\"A multiplicação é igual a: \", numero1 * numero2)\n",
-        "  elif (sinal == 4):\n",
-        "    print(\"A divisão é igual a: \", numero1 / numero2)\n"
+        "  print(f\"O nome '{nome}' não contém a letra 'a'.\")"
       ],
       "metadata": {
-        "id": "glE1CB86SXrX",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6590f278-524d-41b2-8175-06102386baaa"
+        "id": "jluP5jXlFE1f",
+        "outputId": "813fe90b-c903-469c-aab1-fc4ea2b4da2f"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Selecione o sinal: \n",
-            "1 - Adição\n",
-            "2 - Subtração\n",
-            "3 - Multiplicação\n",
-            "4 - Divisão\n",
-            "Digite o sinal: 3\n",
-            "Digite o primeiro número: 14\n",
-            "Digite o segundo número: 21\n",
-            "A multiplicação é igual a:  294.0\n"
+            "Digite um nome: mariany\n",
+            "O nome 'mariany' contém a letra 'a'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um número e informe se ele é múltiplo de 5. Crie um algoritmo em Python que verifique se o número é divisível por 5."
+      ],
+      "metadata": {
+        "id": "dKTSAWwgFWy2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero = int(input(\"Digite um número: \"))\n",
+        "\n",
+        "if numero % 5 == 0:\n",
+        "  print(f\"O número {numero} é múltiplo de 5.\")\n",
+        "else:\n",
+        "  print(f\"O número {numero} não é múltiplo de 5.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g72I5_0TFYbO",
+        "outputId": "613e92e0-1826-42fe-f6f1-79a5d14501c2"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número: 25\n",
+            "O número 25 é múltiplo de 5.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça a temperatura atual e informe se está quente (acima de 30°C) ou frio (30°C ou menos). Crie um algoritmo em Python para essa verificação."
+      ],
+      "metadata": {
+        "id": "xAJ7yHkkG5lO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "temperatura = float(input(\"Digite a temperatura atual em °C: \")\n",
+        "\n",
+        "if temperatura > 30:\n",
+        "  print(\"Está quente!\")\n",
+        "else:\n",
+        "  print(\"Está frio (30°C ou menos).\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K1WS2FTFG_HW",
+        "outputId": "6bb85309-78fd-417b-a24e-07faa69ee2d4"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a temperatura atual em °C: 20°\n",
+            "Está frio (30°C ou menos).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça ao usuário para digitar \"S\" para continuar ou \"N\" para sair e informe a ação correspondente. Crie um algoritmo em Python que faça essa validação e exiba a mensagem correta."
+      ],
+      "metadata": {
+        "id": "f3pspOsxHV3W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "escolha = input(\"Digite 'S' para continuar ou 'N' para sair: \")\n",
+        "\n",
+        "if escolha == 'S':\n",
+        "  print(\"Você escolheu continuar.\")\n",
+        "elif escolha == 'N':\n",
+        "  print(\"Você escolheu sair.\")\n",
+        "else:\n",
+        "  print(\"Opção inválida. Por favor, digite 'S' ou 'N'.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s3DzaBe8HbvF",
+        "outputId": "2a15e12d-0e8d-479f-88a8-89605a0d1c0e"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite 'S' para continuar ou 'N' para sair: s\n",
+            "Você escolheu continuar.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um número e informe se ele é negativo, zero ou positivo. Crie um algoritmo em Python para classificar o número."
+      ],
+      "metadata": {
+        "id": "LX8LFTZzHod0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero = float(input(\"Digite um número: \").\n",
+        "\n",
+        "if numero > 0:\n",
+        "  print(\"O número é positivo.\")\n",
+        "elif numero < 0:\n",
+        "  print(\"O número é negativo.\")\n",
+        "else:\n",
+        "  print(\"O número é zero.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Sf3L9_jTHsTc",
+        "outputId": "ce01466a-7bf7-4b4e-ff7d-f07763164967"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número: 0,9\n",
+            "O número é positivo.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um número de 1 a 7 e informe o dia da semana correspondente. Crie um algoritmo em Python que associe o número ao dia correto."
+      ],
+      "metadata": {
+        "id": "yyPGmckHIU7f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero_dia = int(input(\"Digite um número de 1 a 7 (1 para Domingo, 7 para Sábado): \"))\n",
+        "\n",
+        "if numero_dia == 1:\n",
+        "  print(\"O dia correspondente é Domingo.\")\n",
+        "elif numero_dia == 2:\n",
+        "  print(\"O dia correspondente é Segunda-feira.\")\n",
+        "elif numero_dia == 3:\n",
+        "  print(\"O dia correspondente é Terça-feira.\")\n",
+        "elif numero_dia == 4:\n",
+        "  print(\"O dia correspondente é Quarta-feira.\")\n",
+        "elif numero_dia == 5:\n",
+        "  print(\"O dia correspondente é Quinta-feira.\")\n",
+        "elif numero_dia == 6:\n",
+        "  print(\"O dia correspondente é Sexta-feira.\")\n",
+        "elif numero_dia == 7:\n",
+        "  print(\"O dia correspondente é Sábado.\")\n",
+        "else:\n",
+        "  print(\"Número inválido. Por favor, digite um número entre 1 e 7.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SMXe0IntIZQH",
+        "outputId": "1d90073d-3dad-40a4-a0f7-43819bd0c508"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número de 1 a 7 (1 para Domingo, 7 para Sábado): 6\n",
+            "O dia correspondente é Sexta-feira.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um ano e informe se ele é bissexto. Crie um algoritmo em Python que verifique se o ano é divisível por 4 e não por 100, exceto se também for divisível por 400."
+      ],
+      "metadata": {
+        "id": "LF0_0HgTIm4F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ano = int(input(\"Digite um ano: \"))\n",
+        "\n",
+        "if (ano % 4 == 0 and ano % 100 != 0) or (ano % 400 == 0):\n",
+        "  print(f\"O ano {ano} é bissexto.\")\n",
+        "else:\n",
+        "  print(f\"O ano {ano} não é bissexto.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4htEzHw_Iq31",
+        "outputId": "cb950959-ffcd-46b9-dbb8-06a4c453f2ae"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um ano: 2024\n",
+            "O ano 2024 é bissexto.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça a quantidade de horas trabalhadas e o valor por hora. Se trabalhou até 40 horas, calcule o salário normalmente (horas × valor por hora). Se trabalhou mais de 40 horas, as horas extras devem ter um adicional de 50% (horas extras × valor por hora × 1.5). Crie um algoritmo em Python que realize esse cálculo corretamente."
+      ],
+      "metadata": {
+        "id": "L2f8R2U-I3JV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "horas_trabalhadas = float(input(\"Digite a quantidade de horas trabalhadas: \"))\n",
+        "valor_por_hora = float(input(\"Digite o valor por hora: \"))\n",
+        "\n",
+        "salario = 0\n",
+        "\n",
+        "if horas_trabalhadas <= 40:\n",
+        "  salario = horas_trabalhadas * valor_por_hora\n",
+        "else:\n",
+        "  salario_base = 40 * valor_por_hora\n",
+        "  horas_extras = horas_trabalhadas - 40\n",
+        "  valor_horas_extras = horas_extras * valor_por_hora * 1.5\n",
+        "  salario = salario_base + valor_horas_extras\n",
+        "\n",
+        "print(f\"O salário total é: R$ {salario:.2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zm7ss9ajI53-",
+        "outputId": "04142df5-1303-4a13-9cf9-d7d767652273"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a quantidade de horas trabalhadas: 39\n",
+            "Digite o valor por hora: 300\n",
+            "O salário total é: R$ 11700.00\n"
           ]
         }
       ]
